# DBMS_09

./: .gitignore  README.md  fabrik-frontend.spec  installer.iss  pyproject.toml
src/fabrik_frontend/: __main__.py  api.py  connection_dialog.py  ui.py
